--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="next"><div class="box"><button></button><div class="caret"></div></div></div>
         </div>
 
-        <div class="slide is-center A">
+        <div class="slide is-center is-wide A">
           <div class="content">
             <h1>Obesity Defined</h1>
             <hr />
