--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Sentara</title>
+    <link href="css/320andup.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Asap">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
   </head>
 
   <body>
@@ -76,7 +78,7 @@
             <h1>Obesity Defined</h1>
             <hr />
             <h2>BMI = wt.(kg)/ht.(m2)</h2>
-            <img src="img/slide5.png" />
+            <img class="centerBar" src="img/slide5.png" />
           </div>
           <div class="next"><div class="box"><button></button><div class="caret"></div></div></div>
         </div>
