updated responsive css

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Sentara</title>
-    <link href="css/320andup.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/320andup.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Asap">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
   </head>
@@ -43,6 +43,9 @@
               <h3>Obesity is a life-long progressive, life-threatening, genetically-related, costly, multi-factorial disease of excess fat storage</h3>
             </div>
           </div>
+          <div class="smallScreen">
+            <img src="img/sidebar_slide2.png" />
+          </div>
           <div class="sideBar" style="background-image: url(img/sidebar_slide2.png);"></div>
           <div class="next"><div class="box"><button></button><div class="caret"></div></div></div>
         </div>
@@ -56,6 +59,9 @@
               <p>*The term obesity means we are now at very high risk of having serious health problems like high blood pressure, high cholesterol or diabetes due to our excess weight.</p>
             </div>
           </div>
+          <div class="smallScreen">
+            <img src="img/sidebar_slide3.png" />
+          </div>
           <div class="sideBar" style="background-image: url(img/sidebar_slide3.png);"></div>
           <div class="next"><div class="box"><button></button><div class="caret"></div></div></div>
         </div>
@@ -68,6 +74,9 @@
               <h3>Morbid obesity generally refers to when a person is 100 lbs. or more above their ideal weight, or when their BMI is greater than 40.</h3>
               <p>*Morbid obesity means that we are statistically less likely to live as long as we should due to our excess weight.</p>
             </div>
+          </div>
+          <div class="smallScreen">
+            <img src="img/sidebar_slide2.png" />
           </div>
           <div class="sideBar" style="background-image: url(img/sidebar_slide2.png);"></div>
           <div class="next"><div class="box"><button></button><div class="caret"></div></div></div>
@@ -98,6 +107,9 @@
               </ul>
             </div>
           </div>
+          <div class="smallScreen">
+            <img src="img/sidebar_slide2.png" />
+          </div>
           <div class="sideBar" style="background-image: url(img/sidebar_slide2.png);"></div>
           <div class="next"><div class="box"><button></button><div class="caret"></div></div></div>
         </div>
@@ -108,7 +120,10 @@
               <h1>Medical Complications of Obesity</h1>
             </div>
           </div>
-          <div class="sideBar" style="background-image: url(img/sidebar_slide2.png);"></div>
+          <div class="smallScreen">
+            <img src="img/sidebar_slide3.png" />
+          </div>
+          <div class="sideBar" style="background-image: url(img/sidebar_slide3.png);"></div>
           <div class="next"><div class="box"><button></button><div class="caret"></div></div></div>
         </div>
 
