--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <ul>
         </ul>
         <div class="navbg"></div>
+        <div class="toolTip"></div>
       </div>
 
       <div id="content">
@@ -32,7 +33,7 @@
             <h2 class="quaternary">Caren Beasley, MD</h2>
             <h3 class="quaternary">Clinical Director of Medical Programs</h3>
           </div>
-          <div class="next"><div class="box"><button></button><div class="caret"></div></div></div>
+          <div class="next"><span>Scroll to</span><div class="box"><button></button><div class="caret"></div></div><span>Proceed</span></div>
         </div>
 
         <div class="slide B">
@@ -46,7 +47,7 @@
           <div class="smallScreen">
             <img src="img/sidebar_slide2.png" />
           </div>
-          <div class="sideBar lazy" data-original="img/sidebar_slide2.png"></div>
+          <div class="sideBar lazy" src="img/background/loading_background.gif" data-original="img/sidebar_slide2.png"></div>
           <div class="next"><div class="box"><button></button><div class="caret"></div></div></div>
         </div>
 
@@ -60,9 +61,9 @@
             </div>
           </div>
           <div class="smallScreen">
-            <img src="img/sidebar_slide3.png" />
+            <img class="lazy" src="img/background/loading_background.gif" data-original="img/sidebar_slide3.png" />
           </div>
-          <div class="sideBar lazy" data-original="img/sidebar_slide3.png"></div>
+          <div class="sideBar lazy" src="img/background/loading_background.gif" data-original="img/sidebar_slide3.png"></div>
           <div class="next"><div class="box"><button></button><div class="caret"></div></div></div>
         </div>
 
@@ -76,9 +77,9 @@
             </div>
           </div>
           <div class="smallScreen">
-            <img src="img/sidebar_slide2.png" />
+            <img class="lazy" src="img/background/loading_background.gif" data-original="img/sidebar_slide2.png" />
           </div>
-          <div class="sideBar lazy" data-original="img/sidebar_slide2.png"></div>
+          <div class="sideBar lazy" src="img/background/loading_background.gif" data-original="img/sidebar_slide2.png"></div>
           <div class="next"><div class="box"><button></button><div class="caret"></div></div></div>
         </div>
 
@@ -87,11 +88,10 @@
             <h1>Obesity Defined</h1>
             <hr />
             <h2>BMI = wt.(kg)/ht.(m2)</h2>
-            <img class="centerBar lazy" data-original="img/slide5.png" />
+            <img class="centerBar" src="img/slide5.png" />
           </div>
-
           <div class="smallScreen">
-            <img src="img/slide5.png" />
+            <img class="lazy" src="img/background/loading_background.gif" data-original="img/slide5.png" />
           </div>
           <div class="next"><div class="box"><button></button><div class="caret"></div></div></div>
         </div>
@@ -112,9 +112,9 @@
             </div>
           </div>
           <div class="smallScreen">
-            <img src="img/sidebar_slide2.png" />
+            <img class="lazy" src="img/background/loading_background.gif" data-original="img/sidebar_slide2.png" />
           </div>
-          <div class="sideBar lazy" data-original="img/sidebar_slide2.png"></div>
+          <div class="sideBar lazy" src="img/background/loading_background.gif" data-original="img/sidebar_slide2.png"></div>
           <div class="next"><div class="box"><button></button><div class="caret"></div></div></div>
         </div>
 
@@ -125,9 +125,9 @@
             </div>
           </div>
           <div class="smallScreen">
-            <img class="lazy" data-original="img/sidebar_slide3.png" />
+            <img class="lazy" src="img/background/loading_background.gif" data-original="img/sidebar_slide3.png" />
           </div>
-          <div class="sideBar lazy" data-original="img/sidebar_slide3.png"></div>
+          <div class="sideBar lazy" src="img/background/loading_background.gif" data-original="img/sidebar_slide3.png"></div>
           <div class="next"><div class="box"><button></button><div class="caret"></div></div></div>
         </div>
 
@@ -193,7 +193,6 @@
     </div>
   <script type="text/javascript" src="js/jquery.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-  <script type="text/javascript" src="js/slide.js"></script>  
   <script type="text/javascript" src="js/main.js"></script>  
   </body>
 
