added tooltip for nav bar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
         </ul>
         <div class="navbg"></div>
-        <div class="toolTip"></div>
+        <div class="toolTip"><div class="caret"></div><span>Pg <strong class="pageNumber">1</strong></span></div>
       </div>
 
       <div id="content">
