--- a/index.html
+++ b/index.html
@@ -163,27 +163,28 @@
                 <img src="img/map_slides/map_2010.png" alt="" />
               </div>
               <div id="subHeadContainer">
-                <h3>In 1985, only 8 states had an obesity rate of 10-14%.</h3>
-                <h3>This increased significantly in 1987.</h3>
-                <h3>It increased again 2 years later in 1989.</h3>
-                <h3>By 1991 we had a new level of obesity, now at 15-19% in some states.</h3>
-                <h3>This increased in 1993.</h3>
-                <h3>By 1994, no state had an obesity rate of less than 10%.</h3>
-                <h3>1995</h3>
-                <h3>1996</h3>
-                <h3>We reached a new high in 1997, with 3 states now at 20-24% obesity.</h3>
-                <h3>By1999, half of the country had caught up with the new high obesity rate.</h3>
-                <h3>In 2000, Colorado was the last state to have an obesity rate below 15%.</h3>
-                <h3>Mississippi became the first state to reach an obesity rate of 25-29% in 2001.</h3>
-                <h3>In 2002 no state had an obesity rate below 15% anymore.</h3>
-                <h3>2003</h3>
-                <h3>2004</h3>
-                <h3>Again, a new all time high obesity rate of greater than 30% was first seen in 2005.</h3>
-                <h3>2007</h3>
-                <h3>Again, Colorado was the thinnest state in 2009.</h3>
-                <h3>But Colorado lost the battle in 2010.</h3>
+                <h3 data-year="1985">In 1985, only 8 states had an obesity rate of 10-14%.</h3>
+                <h3 data-year="1987">This increased significantly in 1987.</h3>
+                <h3 data-year="1989">It increased again 2 years later in 1989.</h3>
+                <h3 data-year="1991">By 1991 we had a new level of obesity, now at 15-19% in some states.</h3>
+                <h3 data-year="1993">This increased in 1993.</h3>
+                <h3 data-year="1994">By 1994, no state had an obesity rate of less than 10%.</h3>
+                <h3 data-year="1995">1995</h3>
+                <h3 data-year="1996">1996</h3>
+                <h3 data-year="1997">We reached a new high in 1997, with 3 states now at 20-24% obesity.</h3>
+                <h3 data-year="1999">By1999, half of the country had caught up with the new high obesity rate.</h3>
+                <h3 data-year="2000">In 2000, Colorado was the last state to have an obesity rate below 15%.</h3>
+                <h3 data-year="2001">Mississippi became the first state to reach an obesity rate of 25-29% in 2001.</h3>
+                <h3 data-year="2002">In 2002 no state had an obesity rate below 15% anymore.</h3>
+                <h3 data-year="2003">2003</h3>
+                <h3 data-year="2004">2004</h3>
+                <h3 data-year="2005">Again, a new all time high obesity rate of greater than 30% was first seen in 2005.</h3>
+                <h3 data-year="2007">2007</h3>
+                <h3 data-year="2009">Again, Colorado was the thinnest state in 2009.</h3>
+                <h3 data-year="2010">But Colorado lost the battle in 2010.</h3>
               </div>
-              <div id="slideNavigation"><span class="slideNavBg"></span><div class="previousCaret"></div><div class="pagination"></div><div class="nextCaret"></div></div>
+              
+              <div id="slideNavigation"><div class="toolTip"><div class="caret"></div><span><strong class="pageNumber">1</strong></span></div><span class="slideNavBg"></span><div class="inline previousCaret"></div><div class="inline pagination"></div><div class="inline nextCaret"></div></div>
             </div>
           </div>
           <div class="next"><div class="box"><button></button><div class="caret"></div></div></div>
@@ -192,6 +193,7 @@
       </div>  
     </div>
   <script type="text/javascript" src="js/jquery.js"></script>
+  <script type="text/javascript" src="js/slide.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>  
   </body>
